Fixing jumbotron on mobile

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -117,6 +117,14 @@
     main.home {
         padding: 10px 0;
     }
+    .jumbotron {
+        height: 500px;
+    }
+    .jumbotron>.container {
+        top: -500px;
+        padding: 1.5rem 1.25rem;
+        justify-content: space-between;
+    }
     #featured-news h2 {
         margin-top: 0 !important;
     }
